# ascon-aead

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml
ascon-aead/: CHANGELOG.md  Cargo.toml  README.md
ascon-aead/benches/: asconbenches.rs
ascon-aead/src/: asconcore.rs  lib.rs
ascon-aead/tests/: kats.py  kats_test.rs
ascon-benches/: Cargo.toml
ascon-benches/benches/: aead.rs  hash.rs
ascon-core/: CHANGELOG.md  Cargo.toml  README.md
ascon-core/benches/: permutation.rs
ascon-core/src/: lib.rs
ascon-hash/: CHANGELOG.md  Cargo.toml  README.md
ascon-hash/benches/: hash.rs
ascon-hash/src/: lib.rs
ascon-hash/tests/: kats_tests.rs
benches/: asconbenches.rs
src/: asconcore.rs  lib.rs
tests/: kats_test.rs
tests/ascon128Av12-KATs/: AEAD_KAT-1.txt  AEAD_KAT-100.txt  AEAD_KAT-1001.txt  AEAD_KAT-1003.txt  AEAD_KAT-1004.txt  AEAD_KAT-1007.txt  AEAD_KAT-1009.txt  AEAD_KAT-101.txt  AEAD_KAT-1010.txt  AEAD_KAT-1012.txt  AEAD_KAT-1015.txt  AEAD_KAT-1016.txt  AEAD_KAT-1021.txt  AEAD_KAT-1022.txt  AEAD_KAT-1024.txt  AEAD_KAT-1025.txt  AEAD_KAT-1026.txt  AEAD_KAT-1027.txt  AEAD_KAT-1028.txt  AEAD_KAT-103.txt  AEAD_KAT-1030.txt  AEAD_KAT-1031.txt  AEAD_KAT-1032.txt  AEAD_KAT-1033.txt  AEAD_KAT-1035.txt  AEAD_KAT-1038.txt  AEAD_KAT-1039.txt  AEAD_KAT-1040.txt  AEAD_KAT-1041.txt  AEAD_KAT-1042.txt  AEAD_KAT-1047.txt  AEAD_KAT-1049.txt  AEAD_KAT-105.txt  AEAD_KAT-1050.txt  AEAD_KAT-1051.txt  AEAD_KAT-1053.txt  AEAD_KAT-1054.txt  AEAD_KAT-1055.txt  AEAD_KAT-1056.txt  AEAD_KAT-1057.txt  (+574 more)
tests/ascon128av12-KATs/: AEAD_KAT-10.txt  AEAD_KAT-1000.txt  AEAD_KAT-1002.txt  AEAD_KAT-1005.txt  AEAD_KAT-1006.txt  AEAD_KAT-1008.txt  AEAD_KAT-1011.txt  AEAD_KAT-1013.txt  AEAD_KAT-1014.txt  AEAD_KAT-1017.txt  AEAD_KAT-1018.txt  AEAD_KAT-1019.txt  AEAD_KAT-102.txt  AEAD_KAT-1020.txt  AEAD_KAT-1023.txt  AEAD_KAT-1029.txt  AEAD_KAT-1034.txt  AEAD_KAT-1036.txt  AEAD_KAT-1037.txt  AEAD_KAT-104.txt  AEAD_KAT-1043.txt  AEAD_KAT-1044.txt  AEAD_KAT-1045.txt  AEAD_KAT-1046.txt  AEAD_KAT-1048.txt  AEAD_KAT-1052.txt  AEAD_KAT-106.txt  AEAD_KAT-1060.txt  AEAD_KAT-1061.txt  AEAD_KAT-1063.txt  AEAD_KAT-1064.txt  AEAD_KAT-1065.txt  AEAD_KAT-1070.txt  AEAD_KAT-1071.txt  AEAD_KAT-1077.txt  AEAD_KAT-1078.txt  AEAD_KAT-1082.txt  AEAD_KAT-1083.txt  AEAD_KAT-1084.txt  AEAD_KAT-1085.txt  (+435 more)
tests/ascon128v12-KATs/: AEAD_KAT-1.txt  AEAD_KAT-10.txt  AEAD_KAT-100.txt  AEAD_KAT-1000.txt  AEAD_KAT-1001.txt  AEAD_KAT-1002.txt  AEAD_KAT-1003.txt  AEAD_KAT-1004.txt  AEAD_KAT-1005.txt  AEAD_KAT-1006.txt  AEAD_KAT-1007.txt  AEAD_KAT-1008.txt  AEAD_KAT-1009.txt  AEAD_KAT-101.txt  AEAD_KAT-1010.txt  AEAD_KAT-1011.txt  AEAD_KAT-1012.txt  AEAD_KAT-1013.txt  AEAD_KAT-1014.txt  AEAD_KAT-1015.txt  AEAD_KAT-1016.txt  AEAD_KAT-1017.txt  AEAD_KAT-1018.txt  AEAD_KAT-1019.txt  AEAD_KAT-102.txt  AEAD_KAT-1020.txt  AEAD_KAT-1021.txt  AEAD_KAT-1022.txt  AEAD_KAT-1023.txt  AEAD_KAT-1024.txt  AEAD_KAT-1025.txt  AEAD_KAT-1026.txt  AEAD_KAT-1027.txt  AEAD_KAT-1028.txt  AEAD_KAT-1029.txt  AEAD_KAT-103.txt  AEAD_KAT-1030.txt  AEAD_KAT-1031.txt  AEAD_KAT-1032.txt  AEAD_KAT-1033.txt  (+1049 more)
tests/ascon80pqv12-KATs/: AEAD_KAT-1.txt  AEAD_KAT-10.txt  AEAD_KAT-100.txt  AEAD_KAT-1000.txt  AEAD_KAT-1001.txt  AEAD_KAT-1002.txt  AEAD_KAT-1003.txt  AEAD_KAT-1004.txt  AEAD_KAT-1005.txt  AEAD_KAT-1006.txt  AEAD_KAT-1007.txt  AEAD_KAT-1008.txt  AEAD_KAT-1009.txt  AEAD_KAT-101.txt  AEAD_KAT-1010.txt  AEAD_KAT-1011.txt  AEAD_KAT-1012.txt  AEAD_KAT-1013.txt  AEAD_KAT-1014.txt  AEAD_KAT-1015.txt  AEAD_KAT-1016.txt  AEAD_KAT-1017.txt  AEAD_KAT-1018.txt  AEAD_KAT-1019.txt  AEAD_KAT-102.txt  AEAD_KAT-1020.txt  AEAD_KAT-1021.txt  AEAD_KAT-1022.txt  AEAD_KAT-1023.txt  AEAD_KAT-1024.txt  AEAD_KAT-1025.txt  AEAD_KAT-1026.txt  AEAD_KAT-1027.txt  AEAD_KAT-1028.txt  AEAD_KAT-1029.txt  AEAD_KAT-103.txt  AEAD_KAT-1030.txt  AEAD_KAT-1031.txt  AEAD_KAT-1032.txt  AEAD_KAT-1033.txt  (+1049 more)
