[package]
name = "ascon"
description = "Implementation of the authenticated encryption scheme Ascon"
version = "0.1.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/rust-ascon"
edition = "2018"
keywords = ["aead", "ascon,", "encryption"]
categories = ["cryptography"]

[dependencies]
aead = { version = ">= 0.3", default-features = false }
cipher = { version = ">= 0.2.1", default-features = false }
subtle = ">= 2"
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex = ">= 0.4"
aead = { version = ">= 0.3", features = ["alloc"]}
spectral = ">= 0.6"

[features]
default = ["zeroize"]