[package]
name = "ascon-aead"
description = "Implementation of the authenticated encryption scheme Ascon-128 and Ascon-128a"
version = "0.1.4"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/ascon-aead"
homepage = "https://github.com/sebastinas/ascon-aead"
readme = "README.md"
edition = "2021"
rust-version = "1.56"
keywords = ["AEAD", "ascon", "encryption"]
categories = ["cryptography"]
exclude = [".github/", ".gitignore"]

[dependencies]
aead = { version = "0.4", default-features = false }
subtle = "2"
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"
aead = { version = "0.4", features = ["alloc"] }
spectral = "0.6"
criterion = "0.3"

[features]
default = ["zeroize", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[[bench]]
name = "asconbenches"
harness = false
required-features = ["default", "std"]
