[package]
name = "ascon-aead"
version = "0.4.4"
description = "Implementation of the authenticated encryption schemes Ascon-AEAD128"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ascon-aead"
repository = "https://github.com/sebastinas/ascon-aead/tree/master/ascon-aead"
keywords = ["AEAD", "ascon", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.5", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false, features = [
    "derive",
] }
ascon-core = { version = "0.4", path = "../ascon-core", default-features = false }

[dev-dependencies]
hex = "0.4"
aead = { version = "0.5", features = ["alloc"] }
spectral = { version = "0.6", default-features = false }

[features]
default = ["alloc", "getrandom", "dep:zeroize"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream = ["aead/stream"]
zeroize = ["ascon-core/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
