[package]
name = "ascon-aead"
version = "0.5.2"
description = "Implementation of the authenticated encryption schemes Ascon-AEAD128"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ascon-aead"
repository = "https://github.com/sebastinas/ascon-aead/tree/main/ascon-aead"
keywords = ["AEAD", "ascon", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.2", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false, features = [
    "derive",
] }
ascon-core = { version = "0.5", path = "../ascon-core", default-features = false }
inout = { version = "0.2", default-features = false }

[dev-dependencies]
hex = "0.4"
aead = { version = "0.6.0-rc.2", features = ["alloc"] }
spectral = { version = "0.6", default-features = false }

[features]
default = ["std", "os_rng", "dep:zeroize"]
std = ["alloc"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
os_rng = ["aead/os_rng", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
zeroize = ["ascon-core/zeroize"]

[package.metadata.docs.rs]
all-features = true
