[package]
name = "ascon-core"
description = "DEPRECATED: Use `ascon` instead"
version = "0.1.4"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/ascon-aead"
homepage = "https://github.com/sebastinas/ascon-aead"
readme = "README.md"
edition = "2021"
rust-version = "1.56"
keywords = ["Ascon", "permutation"]
categories = ["cryptography", "no-std"]
exclude = [".github/", ".gitignore"]

[dependencies]
ascon = "0.4"

[features]
no_unroll = ["ascon/no_unroll"] # Do not unroll loops for binary size reduction
