[package]
name = "ascon-core"
version = "0.5.0"
description = "Pure rust implementation of the Ascon permutation"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/ascon-core"
repository = "https://github.com/sebastinas/ascon-aead/tree/master/ascon-core"
keywords = ["Ascon", "crypto", "permutation"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
zeroize = { version = "1.6.0", default-features = false, optional = true }

[features]
no_unroll = []            # Do not unroll loops for binary size reduction
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
