[package]
name = "ascon-core"
version = "0.5.0"
description = "Pure rust implementation of the Ascon permutation"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/ascon-core"
repository = "https://github.com/sebastinas/ascon-aead/tree/main/ascon-core"
keywords = ["Ascon", "crypto", "permutation"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
zeroize = { version = "1.6.0", default-features = false, features = [
    "derive",
], optional = true }

[features]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ascon_impl, values("no_unroll"))',
] }
