[package]
name = "ascon-hash"
version = "0.3.0"
description = "Implementation of Ascon-Hash256 and Ascon-XOF128"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
documentation = "https://docs.rs/ascon-hash"
repository = "https://github.com/sebastinas/ascon-aead/tree/main/ascon-hash"
keywords = ["crypto", "hash", "ascon"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
digest = { version = "0.10", default-features = false, features = ["core-api"] }
ascon-core = { version = "0.5", path = "../ascon-core", default-features = false }

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
hex = "0.4"

[features]
default = ["std"]
std = ["digest/std"]
zeroize = ["ascon-core/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
