[package]
name = "ascon-hash"
version = "0.3.1"
description = "Implementation of Ascon-Hash256 and Ascon-XOF128"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
documentation = "https://docs.rs/ascon-hash"
repository = "https://github.com/sebastinas/ascon-aead/tree/main/ascon-hash"
keywords = ["crypto", "hash", "ascon"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
digest = "0.11.0-rc.3"
ascon-core = { version = "0.5", path = "../ascon-core", default-features = false }

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
hex = "0.4"

[features]
alloc = ["digest/alloc"]
default = ["alloc"]
zeroize = ["ascon-core/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
